--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-size: 10px;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.list-levels {
+    display: flex;
+    flex-flow: column wrap;
+    height: 100vh;
+}
+
+.item-level {
+    margin: 3rem;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
+
+.btn-level {
+    background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+    border-radius: 1rem;
+    width: 12rem;
+    outline: none;
+    color: white;
+    font-size: 2rem;
+    boxShadow: 0 3px 5px 2px rgba(255, 105, 135, .3);
+}
+
+.btns-level-menu {
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer-levels {
+    background: linear-gradient(45deg, #375fa1 30%, #689cf2 90%);
+    boxShadow: 0 3px 5px 2px rgba(91, 212, 252, .3);
+    width: 16rem;
+    margin: 3rem;
+    font-size: 1.5rem;
+}
+
+.check-level {
+    width: 3rem;
+    height: 3rem;
+    margin-right: 1rem;
+}
+
+.passed-level {
+    background: url("/src/assets/icons/checkIcon.png") 100% 100% no-repeat;
+    background-size: cover;
 }
